--- a/onlineshop/src/main/resources/static/css/shopping-cart-styles.css
+++ b/onlineshop/src/main/resources/static/css/shopping-cart-styles.css
@@ -36,28 +36,21 @@ main .shopping-cart-items .cart-item img {
     object-fit: contain;
 }
 
-main .shopping-cart-items .cart-item .cart-item-info {
-    display: flex;
-    align-items: center;
-    gap: 4em;
-    width: 30%;
-}
-
-main .shopping-cart-items .cart-item .cart-item-info .size-selector,
-main .shopping-cart-items .cart-item .cart-item-info .quantity-input {
-    width: 50%;
+main .shopping-cart-items .cart-item .size-selector,
+main .shopping-cart-items .cart-item .quantity-input {
+    width: 12%;
     display: flex;
     flex-direction: column;
     gap: 0.5em;
 }
 
-main .shopping-cart-items .cart-item .cart-item-info .size-selector label,
-main .shopping-cart-items .cart-item .cart-item-info .quantity-input label {
+main .shopping-cart-items .cart-item .size-selector label,
+main .shopping-cart-items .cart-item .quantity-input label {
     font-size: 16px;
 }
 
-main .shopping-cart-items .cart-item .cart-item-info .size-selector select,
-main .shopping-cart-items .cart-item .cart-item-info .quantity-input select {
+main .shopping-cart-items .cart-item .size-selector select,
+main .shopping-cart-items .cart-item .quantity-input select {
     width: 100%;
     outline: none;
     border: 1px solid #ccc;
