--- a/onlineshop/src/main/resources/static/css/profile-styles.css
+++ b/onlineshop/src/main/resources/static/css/profile-styles.css
@@ -109,6 +109,10 @@ main .main-profile-info .main-info-section form .exit-button:hover {
     border-color: #000;
 }
 
+main .main-profile-info .main-info-section form .exit-button i {
+    padding-right: 0.3em;
+}
+
 main .main-profile-info .vip-section .become-vip {
     width: 60%;
     display: flex;
