--- a/onlineshop/src/main/resources/templates/shopping-cart.html
+++ b/onlineshop/src/main/resources/templates/shopping-cart.html
@@ -127,9 +127,7 @@
                     </div>
                 </div>
 
-                <form class="make-order-form"
-                      th:action="@{/}"
-                      th:method="POST">
+                <form id="orderForm" class="make-order-form">
                     <button type="submit">Поръчай</button>
                 </form>
             </div>
@@ -140,6 +138,7 @@
 
     <script src="\js\update-quantity-sizes.js"></script>
     <script src="\js\apply-promo.js"></script>
+    <script src="\js\create-order.js"></script>
 
 </body>
 </html>
