--- a/onlineshop/src/main/resources/templates/fragments/commons.html
+++ b/onlineshop/src/main/resources/templates/fragments/commons.html
@@ -47,11 +47,8 @@
                 <li class="icons">
                     <a sec:authorize="isAnonymous()"
                        th:href="@{/users/login}"><i class="fa-solid fa-user"></i>Вход/Регистрация</a>
-                    <form sec:authorize="isAuthenticated()"
-                          th:action="@{/users/profile}"
-                          th:method="POST">
-                        <button><i class="fa-regular fa-user"></i>Моят профил</button>
-                    </form>
+                    <a sec:authorize="isAuthenticated()"
+                       th:href="@{/users/profile}"><i class="fa-regular fa-user"></i>Моят профил</a>
                     <a href="#"><i class="fa-regular fa-heart"></i>Любими</a>
                     <a class="shopping-cart-btn" th:href="@{/shopping-cart}">
                         <i class="fa-solid fa-cart-shopping"></i>Количка
