--- a/onlineshop/src/main/resources/static/css/order-tracking-styles.css
+++ b/onlineshop/src/main/resources/static/css/order-tracking-styles.css
@@ -1,3 +1,53 @@
+main .delivery-info {
+    position: relative;
+}
+
+main .delivery-info .order-status {
+    position: absolute;
+    top: 0;
+    right: 0;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+    font-weight: 500;
+    font-size: 18px;
+}
+
+main .delivery-info .order-status span {
+    color: #fff;
+    padding: 0 1em;
+    border-radius: 0.5em;
+    font-weight: 400;
+    font-size: 16px;
+}
+
+.order-status.delivered span {
+    background-color: #28a745;
+}
+
+.order-status.cancelled span {
+    background-color: #C00;
+}
+
+.order-status.pending span {
+    background-color: #007bff;
+}
+
+.order-status.processing span {
+    background-color: #ffc107;
+    color: black;
+}
+
+.order-status.shipped span {
+    background-color: #ADFF2FFF;
+    color: black;
+}
+
+.order-status.returned span {
+    background-color: #ccc;
+    color: black;
+}
+
 main .order-items-info {
     width: 100%;
 }
