--- a/onlineshop/src/main/resources/templates/profile.html
+++ b/onlineshop/src/main/resources/templates/profile.html
@@ -30,6 +30,7 @@
             <a class="admin-menu-link" th:href="@{/products/add-product}">Добави продукт</a>
             <a class="admin-menu-link" th:href="@{/promo-codes}">Промо кодове</a>
             <a class="admin-menu-link" th:href="@{/promo-codes/add-promo-code}">Добави промо код</a>
+            <a class="admin-menu-link" th:href="@{/orders/all}">Всички поръчки</a>
         </div>
 
         <div class="main-profile-info">
