--- a/onlineshop/src/main/resources/templates/profile.html
+++ b/onlineshop/src/main/resources/templates/profile.html
@@ -19,7 +19,7 @@
         <div class="profile-menu">
             <a class="profile-menu-link" th:href="@{/users/profile}">Данни за профила</a>
             <a class="profile-menu-link" th:href="@{/users/my-orders}">Моите поръчки</a>
-            <a class="profile-menu-link" th:href="@{/users/profile/my-addresses}">Моите адреси</a>
+            <a class="profile-menu-link" th:href="@{/users/my-addresses}">Моите адреси</a>
             <a class="profile-menu-link" th:href="@{/exchange-or-return}">Замяна или връщане</a>
             <a class="profile-menu-link" th:href="@{/users/profile/favourites}">Любими</a>
             <a class="profile-menu-link" th:href="@{/contacts}">Връзка с нас</a>
